--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta id="appName" name="application-name" content="Hiring Management Internal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 </head>
 
 <body>
