use container environment variables during runtime, not during build

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+  <script type="text/javascript" src="env-config.js"></script>
 </head>
 
 <body>
